test/should_pass/basic_007.grg
actions basic_007;

rule r {
	pattern {
		x : Node;
	}
	replace {
	}
}

