test/should_fail/inh_attrib_004.grg
actions inh_attrib_004 using inh_attrib_model_004;

rule r {
	pattern {
	}
	replace {
	}
}

